Fixed the todosApp div overflowing issue

--- a/style.css
+++ b/style.css
@@ -60,16 +60,18 @@ body
 {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    align-items: center;
+    align-items: flex-start;
+    padding: 80px 20px 0px 20px;
     width: 100%;
     height: 100vh;
-    padding: 0 20px;
 }
 
 .todoApp
 {
     width: 100%;
     max-width: 400px;
+    max-height: calc(100vh - 100px);
+    overflow-y: visible;
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -139,14 +141,18 @@ body
 
 .todosContainer
 {
+    max-height: 350px;
+    overflow-y: auto;
+    width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
 #taskList
 {
     width: 100%;
+    padding: 1rem;
 }
 
 #taskList li
